--- a/index.html
+++ b/index.html
@@ -2,77 +2,148 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="">
-<meta name="author" content="">
+<meta name="author" content="miktae">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://nguyenvanthanhminn.github.io/contact/index.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Test tu vung</title>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> 
-	<style>
-		#k{
-			display: none;
-			height: 580px;
-			width: 100%;
-			border: 0;
-		}
-		#e{
-			height: 580px;
-			width: 100%;
-			border: 0;
-		}
-		#select
-		{
-			padding: 4px;
-			font-size: 100%;
-		}
-	</style>
+<title>Contact_ Liên hệ</title>
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-	<h1 style="font-weight: bold;">KIỂM TRA TỪ VỰNG CHỦ ĐIỂM 2- BUỔI 5</h1>
-	<div class="main">
-		<select id="select" onchange="change()">
-			<option value="0">Kiểm tra tiếng Anh</option>
-			<option value="1">Kiểm tra tiếng Hàn</option>
-		</select>
-	</div><br/>
-	 	<script >
-			function change()
-			{
-				 var selValue = document.getElementById("select").value;
-				if(selValue == 1){
-				   	document.getElementById("k").style.display = "block";
-					document.getElementById("e").style.display = "none";
-				   }
-				else
-					{
-						document.getElementById("k").style.display = "none";
-						document.getElementById("e").style.display = "block";
-					}
+<!-- Header content -->
+<header>
+  <div class="profilePhoto"> 
+    <!-- Profile photo --> 
+    <img src="https://scontent.fhan14-2.fna.fbcdn.net/v/t1.6435-9/76776528_205819047081542_664699867557265408_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=gz_42yQ959gAX9xOyqY&_nc_ht=scontent.fhan14-2.fna&oh=680eb280cdebab1e13e9c546449e1504&oe=60F5B9D1" style="width: 259px; height: 259px; border-radius: 50%;" alt="sample"> </div>
+  <!-- Identity details -->
+  <section class="profileHeader">
+    <h1>{{name}}</h1>
+    <hr>
+    <p id="passage">{{passage}}</p>
+  </section>
+  <!-- Links to Social network accounts -->
+  <aside class="socialNetworkNavBar">
+    <div class="socialNetworkNav"> 
+      <!-- Add a Anchor tag with nested img tag here --> 
+      <img id="facebook" @click="openf" class="social" :src="url" alt="sample"> </div>
+    <div class="socialNetworkNav"> 
+      <!-- Add a Anchor tag with nested img tag here --> 
+      <img id="ins" @click="openi" class="social" :src="url"  alt="sample"> </div>
+    <div class="socialNetworkNav"> 
+      <!-- Add a Anchor tag with nested img tag here --> 
+      <img id="github" @click="openg" class="social" :src="url"  alt="sample"> </div>
+  </aside>
+</header>
+<!-- content -->
+<section class="mainContent"> 
+  <!-- Contact details -->
+  <section class="section1">
+    <h2 class="sectionTitle">{{message}}</h2>
+    <hr class="sectionTitleRule">
+    <hr class="sectionTitleRule2">
+    <div class="section1Content">
+      <p id="mail"  class="fa fa-envelope">&ensp;{{mail}}</p>
+      <p id="web"  class="fa fa-globe">&ensp;{{website}}</p>
+	  <p id="addr"  class="fa fa-location-arrow">&ensp;{{address}}</p>
+    </div>
+  </section>
+  </section>
+<footer>
+  <hr>
+  <p class="footerDisclaimer">{{copyright}}</p>
+  <p class="footerNote">{{note}}</p>
+</footer>
+<script>
+alert("Welcome to my website!);
+ let w=$(window).width();
+	if(w<=414){
+		alert("Use a wider screen for a better experience!");
+	}
+	var name= new Vue({
+		el: 'h1',
+		data:{
+			name: "MIK TAE"
+		}
+	});
+	var passage= new Vue({
+		el: '#passage',
+		data:{
+			passage:"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in."
+		}
+	});
+	var face= new Vue({
+		el: '#facebook',
+		data:{
+			url: "https://nguyenvanthanhminn.github.io/contact/facebook.svg"
+		},
+		methods:{
+			openf: function(){
+				open("https://www.facebook.com/miktae.7","_blank");
 			}
-			function enterFullscreen(element) {
-    if (element.requestFullscreen) {
-        //Luôn thử phương thức không có prefix trước
-        element.requestFullscreen();
-    } else if (element.mozRequestFullScreen) {
-        element.mozRequestFullScreen();
-    } else if (element.webkitRequestFullscreen) {
-        element.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT); // cho phép sử dụng bàn phím
-    } else if (element.msRequestFullscreen) {
-        element.msRequestFullscreen();
-    }
-}
-			
-			function Ful()
-			{
-				launchFullScreen(document.getElementById("e")); // Chỉ một element #videoElement và các element con của nó
-							}
-        </script>
-	<!--Khung tiếng Anh-->
-	<div id="anh">
-	<iframe id="e" src="https://quizlet.com/603739745/match/embed?i=3rpgzc&x=1jj1"></iframe>
-	</div>
-	<!--Khung tiếng Hàn-->
-	<iframe id="k" src="https://quizlet.com/603745835/match/embed?i=3rpgzc&x=1jj1"></iframe>
+		}
+	});
+	var ins= new Vue({
+		el: '#ins',
+		data:{
+			url: "https://nguyenvanthanhminn.github.io/contact/instagram.svg"
+		},
+		methods:{
+			openi: function(){
+				open("https://www.instagram.com/mik_tae_7","_blank");
+			}
+		}
+	});
+	var github= new Vue({
+		el: '#github',
+		data:{
+			url: "https://nguyenvanthanhminn.github.io/contact/github.svg"
+		},
+		methods:{
+			openg: function(){
+				open("https://www.nguyenvanthanhminn.github.io","_blank");
+			}
+		}
+	});
+	var oth= new Vue({
+		el: '.sectionTitle',
+		data:{
+			message: "OTHERS"
+		}
+	});
+	var email= new Vue({
+		el: '#mail',
+		data:{
+			mail: "taetae22110107@gmail.com"
+		}
+	});
+	var web= new Vue({
+		el: '#web',
+		data:{
+			website: "nguyenvanthanhmin.wixsite.com"
+		}
+	});
+	var a= new Vue({
+		el: '#addr',
+		data:{
+			address: "Hanoi, Vietnam"
+		}
+	});
+	var c= new Vue({
+		el: '.footerDisclaimer',
+		data:{
+			copyright: "2021 Copyrights - All Rights Reserved"
+		}
+	});
+	var note= new Vue({
+		el: '.footerNote',
+		data:{
+			note: "Mik Tae"
+		}
+	});
+</script>
 </body>
 </html>
