--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ alert("Welcome to my website!);
 		},
 		methods:{
 			openg: function(){
-				open("https://www.nguyenvanthanhminn.github.io","_blank");
+				open("https://www.miktae.github.io","_blank");
 			}
 		}
 	});
@@ -123,7 +123,7 @@ alert("Welcome to my website!);
 	var web= new Vue({
 		el: '#web',
 		data:{
-			website: "nguyenvanthanhmin.wixsite.com"
+			website: "https://www.miktae.com"
 		}
 	});
 	var a= new Vue({
