--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <header>
   <div class="profilePhoto"> 
     <!-- Profile photo --> 
-    <img src="https://scontent.fhan14-2.fna.fbcdn.net/v/t1.6435-9/76776528_205819047081542_664699867557265408_n.jpg?_nc_cat=101&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=gz_42yQ959gAX9xOyqY&_nc_ht=scontent.fhan14-2.fna&oh=680eb280cdebab1e13e9c546449e1504&oe=60F5B9D1" style="width: 259px; height: 259px; border-radius: 50%;" alt="sample"> </div>
-  <!-- Identity details -->
+    <img src="https://miktae-meet.herokuapp.com/assets/favicon.ico"
   <section class="profileHeader">
     <h1>{{name}}</h1>
     <hr>
