--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 <body>
 <!-- Header content -->
 <header>
-  <div class="profilePhoto"> 
+ <div class="profilePhoto"> 
     <!-- Profile photo --> 
     <img src="https://miktae-meet.herokuapp.com/assets/favicon.ico" style="width: 90%"/>
+</div>
   <section class="profileHeader">
     <h1>{{name}}</h1>
     <hr>
