--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="">
 <meta name="author" content="miktae">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://nguyenvanthanhminn.github.io/contact/index.css">
+<link rel="stylesheet" href="index.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Contact_ Liên hệ</title>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
