--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header>
  <div class="profilePhoto"> 
     <!-- Profile photo --> 
-    <img src="https://miktae-meet.herokuapp.com/assets/favicon.ico" style="width: 90%"/>
+    <img src="https://miktae-meet.herokuapp.com/assets/favicon.ico" id="proImg"/>
 </div>
   <section class="profileHeader">
     <h1>{{name}}</h1>
